--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
         </activity>
         <activity
             android:name=".main.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar.Explode">
+            android:theme="@style/AppTheme.Main">
+        </activity>
+        <activity
+            android:name=".main.user.UserActivity"
+            android:theme="@style/AppTheme.User">
         </activity>
     </application>
 
